Bug 277691 - Marble crashed when attempting to download region maps
Summary: Marble crashed when attempting to download region maps
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
: 297601 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-13 13:15 UTC by O Kullmann
Modified: 2012-07-01 16:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE-4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description O Kullmann 2011-07-13 13:15:54 UTC
Application: marble (1.0.0 (Stable Release))
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.6-0.5-desktop x86_64
Distribution: "openSUSE 11.4 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

I start Marble and click under "Datei" ("Files") on "Region herunterladen" ("download region").
Then Marble crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: Marble – Virtueller Globus (marble), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fead113b760 (LWP 25385))]

Thread 5 (Thread 0x7feabed3a700 (LWP 25386)):
#0  0x00007feaccfde67e in __pthread_mutex_unlock_usercnt () from /lib64/libpthread.so.0
#1  0x00007feac82cc07a in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#2  0x00007feac82ccfa9 in ?? () from /lib64/libglib-2.0.so.0
#3  0x00007feac82cd650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#4  0x00007feacf384976 in QEventDispatcherGlib::processEvents (this=0x874470, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007feacf359052 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007feacf359265 in QEventLoop::exec (this=0x7feabed39de0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007feacf26e1e4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x00007feacf33a968 in QInotifyFileSystemWatcherEngine::run (this=0x8e6a10) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007feacf270a5e in QThreadPrivate::start (arg=0x8e6a10) at thread/qthread_unix.cpp:285
#10 0x00007feaccfdaa3f in start_thread () from /lib64/libpthread.so.0
#11 0x00007feacdc9867d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7feab6f80700 (LWP 25387)):
#0  0x00007feaccfde67e in __pthread_mutex_unlock_usercnt () from /lib64/libpthread.so.0
#1  0x00007feac82cc07a in g_main_context_prepare () from /lib64/libglib-2.0.so.0
#2  0x00007feac82ccfa9 in ?? () from /lib64/libglib-2.0.so.0
#3  0x00007feac82cd650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#4  0x00007feacf384976 in QEventDispatcherGlib::processEvents (this=0xa89b10, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007feacf359052 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007feacf359265 in QEventLoop::exec (this=0x7feab6f7fde0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007feacf26e1e4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#8  0x00007feacf33a968 in QInotifyFileSystemWatcherEngine::run (this=0xa896a0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007feacf270a5e in QThreadPrivate::start (arg=0xa896a0) at thread/qthread_unix.cpp:285
#10 0x00007feaccfdaa3f in start_thread () from /lib64/libpthread.so.0
#11 0x00007feacdc9867d in clone () from /lib64/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7feab677f700 (LWP 25388)):
#0  0x00007feacdc8f503 in poll () from /lib64/libc.so.6
#1  0x00007feac82cd114 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007feac82cd650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007feacf384976 in QEventDispatcherGlib::processEvents (this=0xaa9850, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007feacf359052 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007feacf359265 in QEventLoop::exec (this=0x7feab677ede0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007feacf26e1e4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#7  0x00007feacf33a968 in QInotifyFileSystemWatcherEngine::run (this=0xa9b360) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007feacf270a5e in QThreadPrivate::start (arg=0xa9b360) at thread/qthread_unix.cpp:285
#9  0x00007feaccfdaa3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007feacdc9867d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7feab3f7a700 (LWP 25395)):
#0  0x00007feaccfdd07c in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x00007feac82cd179 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007feac82cd650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007feacf384976 in QEventDispatcherGlib::processEvents (this=0x8e3c90, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007feacf359052 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007feacf359265 in QEventLoop::exec (this=0x7feab3f79dd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007feacf26e1e4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:490
#7  0x00007fead079fa48 in Marble::FileStorageWatcher::run (this=0x81f0b0) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/FileStorageWatcher.cpp:401
#8  0x00007feacf270a5e in QThreadPrivate::start (arg=0x81f0b0) at thread/qthread_unix.cpp:285
#9  0x00007feaccfdaa3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007feacdc9867d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fead113b760 (LWP 25385)):
[KCrash Handler]
#6  isValid (this=0x0) at /usr/include/QtCore/qsize.h:124
#7  Marble::GeoSceneTexture::tileSize (this=0x0) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/geodata/scene/GeoSceneTexture.cpp:121
#8  0x00007fead07a4ed5 in Marble::StackedTileLoader::tileSize (this=<value optimized out>) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/StackedTileLoader.cpp:141
#9  0x00007fead078c6f1 in Marble::TextureLayer::tileSize (this=<value optimized out>) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/TextureLayer.cpp:287
#10 0x00007fead06fc027 in Marble::DownloadRegionDialog::Private::rad2PixelX (this=0x2968b20, lon=<value optimized out>) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/DownloadRegionDialog.cpp:212
#11 0x00007fead06fdda9 in Marble::DownloadRegionDialog::region (this=0x2958870) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/DownloadRegionDialog.cpp:366
#12 0x00007fead06ffcb9 in Marble::DownloadRegionDialog::updateTilesCount (this=0x2958870) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/DownloadRegionDialog.cpp:508
#13 0x00007fead07006fa in Marble::DownloadRegionDialog::setSelectionMethod (this=0x2958870, selectionMethod=Marble::DownloadRegionDialog::VisibleRegionMethod) at /usr/src/debug/kdeedu-4.6.0/marble/src/lib/DownloadRegionDialog.cpp:339
#14 0x0000000000426cff in Marble::MarblePart::showDownloadRegionDialog (this=0x79ddd0) at /usr/src/debug/kdeedu-4.6.0/marble/src/marble_part.cpp:1168
#15 0x000000000042b59d in Marble::MarblePart::qt_metacall (this=0x79ddd0, _c=QMetaObject::InvokeMetaMethod, _id=35, _a=0x7fff86b00ca0) at /usr/src/debug/kdeedu-4.6.0/build/marble/src/marble_part.moc:196
#16 0x00007feacf36edef in QMetaObject::activate (sender=0xaa0e90, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff86b00ca0) at kernel/qobject.cpp:3272
#17 0x00007feace71f982 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#18 0x00007feace71fb7a in QAction::activate (this=0xaa0e90, event=<value optimized out>) at kernel/qaction.cpp:1257
#19 0x00007feaceb55e63 in QMenuPrivate::activateCausedStack (this=0x7feaac03f180, causedStack=..., action=0xaa0e90, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:993
#20 0x00007feaceb5be7a in QMenuPrivate::activateAction (this=0x7feaac03f180, action=0xaa0e90, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1085
#21 0x00007feacfc88b1d in KMenu::mouseReleaseEvent (this=0x7feaac060c70, e=<value optimized out>) at /usr/src/debug/kdelibs-4.6.0/kdeui/widgets/kmenu.cpp:458
#22 0x00007feace777538 in QWidget::event (this=0x7feaac060c70, event=0x7fff86b01920) at kernel/qwidget.cpp:8200
#23 0x00007feaceb5d06b in QMenu::event (this=0x7feaac060c70, e=0x7fff86b01920) at widgets/qmenu.cpp:2410
#24 0x00007feace725d14 in QApplicationPrivate::notify_helper (this=0x6c5c10, receiver=0x7feaac060c70, e=0x7fff86b01920) at kernel/qapplication.cpp:4445
#25 0x00007feace72eaac in QApplication::notify (this=<value optimized out>, receiver=0x7feaac060c70, e=0x7fff86b01920) at kernel/qapplication.cpp:4006
#26 0x00007feacfcba9e6 in KApplication::notify (this=0x7fff86b02650, receiver=0x7feaac060c70, event=0x7fff86b01920) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#27 0x00007feacf359bfc in QCoreApplication::notifyInternal (this=0x7fff86b02650, receiver=0x7feaac060c70, event=0x7fff86b01920) at kernel/qcoreapplication.cpp:732
#28 0x00007feace726d25 in sendEvent (receiver=0x7feaac060c70, event=0x7fff86b01920, alienWidget=0x0, nativeWidget=0x7feaac060c70, buttonDown=0x7feacf1f5178, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:215
#29 QApplicationPrivate::sendMouseEvent (receiver=0x7feaac060c70, event=0x7fff86b01920, alienWidget=0x0, nativeWidget=0x7feaac060c70, buttonDown=0x7feacf1f5178, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3105
#30 0x00007feace7a5054 in QETWidget::translateMouseEvent (this=0x7feaac060c70, event=<value optimized out>) at kernel/qapplication_x11.cpp:4372
#31 0x00007feace7a34c9 in QApplication::x11ProcessEvent (this=0x7fff86b02650, event=0x7fff86b02280) at kernel/qapplication_x11.cpp:3564
#32 0x00007feace7cb0f2 in x11EventSourceDispatch (s=0x6a05d0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x00007feac82ccbd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#34 0x00007feac82cd3b0 in ?? () from /lib64/libglib-2.0.so.0
#35 0x00007feac82cd650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#36 0x00007feacf38491f in QEventDispatcherGlib::processEvents (this=0x69cc30, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#37 0x00007feace7cad8e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007feacf359052 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007feacf359265 in QEventLoop::exec (this=0x7fff86b025a0, flags=...) at kernel/qeventloop.cpp:201
#40 0x00007feacf35d6ab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#41 0x0000000000421725 in main (argc=1, argv=0x7fff86b03c58) at /usr/src/debug/kdeedu-4.6.0/marble/src/kdemain.cpp:351

Reported using DrKonqi
Comment 1 Simeon 2011-12-18 21:23:29 UTC
This bug can no longer be reproduced.Report should be closed.
Comment 2 Dennis Nienhüser 2012-05-12 18:03:20 UTC
Happens when an a map theme without any texture layers is active (e.g. plain map).
Comment 3 Dennis Nienhüser 2012-05-12 20:18:19 UTC
Git commit 2dae682f2410e9495b42eaa115bdd31091e041cf by Dennis Nienhüser.
Committed on 12/05/2012 at 21:28.
Pushed by nienhueser into branch 'master'.

Handle download of map regions for themes without texture layers.

Fixes crash when opening the download region dialog when e.g. the plain
map is opened. Related: Crash when attempting to download an empty set.
Crash when switching to a map theme without texture layers after the
download region dialog was opened at least once before.

M  +3    -1    src/QtMainWindow.cpp
M  +1    -0    src/lib/DownloadRegion.cpp
M  +18   -2    src/lib/DownloadRegionDialog.cpp
M  +3    -1    src/marble_part.cpp

http://commits.kde.org/marble/2dae682f2410e9495b42eaa115bdd31091e041cf
Comment 4 Dennis Nienhüser 2012-05-12 20:21:19 UTC
Git commit 9381ba607c52336146d5f90e9b820b4277bf83c3 by Dennis Nienhüser.
Committed on 12/05/2012 at 21:49.
Pushed by nienhueser into branch 'KDE/4.8'.

Handle download of map regions for themes without texture layers.

Fixes crash when opening the download region dialog when e.g. the plain
map is opened. Related: Crash when attempting to download an empty set.
Crash when switching to a map theme without texture layers after the
download region dialog was opened at least once before.
FIXED-IN: KDE-4.8.4
(backported from commit 2dae682f2410e9495b42eaa115bdd31091e041cf)

M  +3    -1    src/QtMainWindow.cpp
M  +15   -0    src/lib/DownloadRegionDialog.cpp
M  +3    -1    src/marble_part.cpp

http://commits.kde.org/marble/9381ba607c52336146d5f90e9b820b4277bf83c3
Comment 5 Dennis Nienhüser 2012-05-12 20:43:23 UTC
*** Bug 297601 has been marked as a duplicate of this bug. ***
Comment 6 Bernhard Beschow 2012-06-11 10:42:57 UTC
Still crashes on Maemo.
Comment 7 Bernhard Beschow 2012-07-01 16:17:12 UTC
Close again, because the crash on Maemo has a different backtrace. See bug 302842 for more details.