Handle download of map regions for themes without texture layers.

Fixes crash when opening the download region dialog when e.g. the plain
map is opened. Related: Crash when attempting to download an empty set.
Crash when switching to a map theme without texture layers after the
download region dialog was opened at least once before.
BUG: 277691
FIXED-IN: KDE-4.8.4
(backported from commit 2dae682f2410e9495b42eaa115bdd31091e041cf)