src/QtMainWindow.cpp
@@ -1344,7 +1344,9 @@ void MainWindow::downloadRegion()
     QString const sourceDir = mapThemeId.left( mapThemeId.lastIndexOf( '/' ));
     mDebug() << "downloadRegion mapThemeId:" << mapThemeId << sourceDir;
     QVector<TileCoordsPyramid> const pyramid = m_downloadRegionDialog->region();
-    m_controlView->marbleWidget()->downloadRegion( sourceDir, pyramid );
+    if ( !pyramid.isEmpty() ) {
+        m_controlView->marbleWidget()->downloadRegion( sourceDir, pyramid );
+    }
 }
 
 void MainWindow::printMapScreenShot()
